Handle turn restrictions with multiple via ways and overlapping restrictions